--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@heroui/theme": "2.4.14-beta.0",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@mdxeditor/editor": "^3.25.0",
+    "@polkadot/api": "^16.0.1",
     "@polkadot/rpc-provider": "^15.7.1",
     "@polkadot/types": "^15.7.1",
     "@polkadot/types-codec": "^15.7.1",
+    "@polkadot/util-crypto": "^13.5.1",
     "@radix-ui/colors": "^3.0.0",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@reactour/tour": "^3.7.0",
