--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-share": "^5.2.2",
     "react-toastify": "^11.0.5",
     "spark-md5": "^3.0.2",
+    "sucrase": "^3.35.0",
     "swr": "^2.3.3",
     "tweetnacl": "^1.0.3",
     "viem": "^2.23.11",
