fix: rpc socket client

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/theme": "2.4.14-beta.0",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@mdxeditor/editor": "^3.25.0",
+    "@open-rpc/client-js": "^1.8.1",
     "@polkadot/api": "^16.0.1",
     "@polkadot/rpc-provider": "^15.7.1",
     "@polkadot/types": "^15.7.1",
