--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@solana/web3.js": "^1.98.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.69.0",
+    "@verisense-network/typeinfo-ts": "^1.0.0",
     "@verisense-network/vemodel-types": "^1.0.14",
     "@wagmi/core": "^2.16.7",
     "alova": "^3.2.13",
