--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-toastify": "^11.0.5",
     "spark-md5": "^3.0.2",
     "sucrase": "^3.35.0",
+    "swiper": "^11.2.10",
     "swr": "^2.3.3",
     "tweetnacl": "^1.0.3",
     "viem": "^2.23.11",
