--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/theme": "2.4.17-beta.0",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@mdxeditor/editor": "^3.25.0",
+    "@modelcontextprotocol/sdk": "^1.17.1",
     "@open-rpc/client-js": "^1.8.1",
     "@polkadot/api": "^16.0.1",
     "@polkadot/extension-dapp": "^0.59.2",
