feat: implement airdrop task updates for agent and MCP registrations with completion modal

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_RPC_URL="ws://localhost:9944"
+
+SENSESPACE_API_KEY = "your_sensespace_api_key"
+SENSESPACE_ENDPOINT = "https://api.sensespace.xyz"
