feat: add Google API credentials to .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ NEXT_PUBLIC_RPC_URL="ws://localhost:9944"
 
 SENSESPACE_API_KEY = "your_sensespace_api_key"
 SENSESPACE_ENDPOINT = "https://api.sensespace.xyz"
+
+GOOGLE_PROJECT_ID="project_id"
+GOOGLE_CLIENT_EMAIL="client_email"
+GOOGLE_PRIVATE_KEY="private_key"
