--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ NEXT_PUBLIC_RPC_URL="ws://localhost:9944"
 SENSESPACE_API_KEY = "your_sensespace_api_key"
 SENSESPACE_ENDPOINT = "https://api.sensespace.xyz"
 
+NEXT_PUBLIC_SENSESPACE_BACKEND_URL = "https://api.sensespace.xyz"
+
 GOOGLE_PROJECT_ID="project_id"
 GOOGLE_CLIENT_EMAIL="client_email"
 GOOGLE_PRIVATE_KEY="private_key"
