--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@alova/psc": "^1.0.12",
@@ -48,16 +48,16 @@
     "lucide-react": "^0.484.0",
     "markdown-truncate": "^1.1.1",
     "meilisearch": "^0.49.0",
-    "next": "15.3.0",
+    "next": "16.0.7",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "pako": "^2.1.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "radash": "^12.1.0",
-    "react": "^19.1.0",
+    "react": "19.2.1",
     "react-countdown": "^2.3.6",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.2.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-share": "^5.2.2",
@@ -73,23 +73,29 @@
     "zustand-computed": "^2.0.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@next/eslint-plugin-next": "^15.3.0",
+    "@next/eslint-plugin-next": "16.0.7",
     "@tailwindcss/postcss": "^4.0.14",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/pako": "^2.0.3",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/spark-md5": "^3.0.5",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "16.0.7",
     "eslint-plugin-react-hooks": "^5.1.0",
     "postcss": "^8.5.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.1.10",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
+  "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
+  }
 }
